--- a/spring2/src/main/resources/application.properties
+++ b/spring2/src/main/resources/application.properties
@@ -2,5 +2,11 @@
 server.port=9002
 
 #접속 경로
-server.servlet.context-path=/spring2
+server.servlet.context-path=/
+#슬래쉬로 진행할수잇다.
 
+#전체 로깅 레벨
+logging.level.root=info
+#특정 패키지의 로깅 레벨 (서버 시작부분 패키지의 경로를 설정해줘야한다.debug 라고 하면 err wning info debug가 출력됨)
+#사용할때 debug로 하다가 info로 사용하여 출력을 숨기기도 한다.
+logging.level.net.softsociety.spring2.spring2 =debug
