--- a/spring7/src/main/resources/application.properties
+++ b/spring7/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #접속 포트
-server.port=8004
+server.port=9005
 
 #접속 경로
-server.servlet.context-path=/spring4
+server.servlet.context-path=/spring7
 #슬래쉬로 진행할수잇다.
 
 #전체 로깅 레벨
@@ -10,7 +10,7 @@ logging.level.root=info
 
 #특정 패키지의 로깅 레벨 (서버 시작부분 패키지의 경로를 설정해줘야한다.debug 라고 하면 err wning info debug가 출력됨)
 #사용할때 debug로 하다가 info로 사용하여 출력을 숨기기도 한다.
-logging.level.net.softsociety.spring4=debug
+logging.level.net.softsociety.spring7=debug
 
 
 
@@ -21,8 +21,7 @@ spring.datasource.username=mini
 spring.datasource.password=mini
 
 # MyBatis type-alias 지정 패키지 (이렇게 적어주면 클래스 이름만으로 바로 불러서 쓸수있다.)
-mybatis.type-aliases-package=net.softsociety.spring4.vo
+mybatis.type-aliases-package=net.softsociety.spring7.domain
 
 # Mybatis mapper 위치 설정 (경로 안의 xml을 다 가져온다)
 mybatis.mapper-locations=mappers/**/*.xml
-
