--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-
 server.port=8001
 server.servlet.context-path=/web
 
@@ -6,26 +5,4 @@ server.servlet.context-path=/web
 logging.level.root=info
 
 # 특정 패키지를 대상으로 로깅 레벨 지정
-logging.level.net.softsociety.spring5=debug
-
-# 오라클 연결 설정
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
-spring.datasource.username=mini
-spring.datasource.password=mini
-
-# MyBatis type-alias 지정 패키지
-mybatis.type-aliases-package=net.softsociety.web.domain
-
-# Mybatis mapper 위치 설정 # mappers라는 폴더 안에 저장. ** : mappers 안에 몇단계 폴더를 만들든 그 안에 xml 파일을 다 불러옴
-mybatis.mapper-locations=mappers/**/*.xml
-
-#파일 업로드 관련
-spring.servlet.multipart.location=c:/upload
-spring.servlet.multipart.max-file-size=100MB
-
-
-##### 사용자 정의 환경 설정
-#게시판 관련 설정값 // page : 한페이지 당 몇 개의 글을 보여줄 것인지. group : 저 밑 숫자를 5개씩 보여줌.
-user.board.page=10
-user.board.group=5
+logging.level.net.softsociety.web=debug
